welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:2: error: type mismatch;
 found   : Int(0)
 required: Boolean
var vert:Boolean = 0
                   ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vert==false) {recule()}
                          ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vert==false) {recule()}
  ^